--- a/cluster-web/templates/_base.html
+++ b/cluster-web/templates/_base.html
@@ -82,7 +82,7 @@
 			{% block titles %}
 			{% endblock %}
 			<p class="text-light">Telnet access: <a href="telnet://{{ telnet }}" class="text-white">{{ telnet }}</a></p>
-			<p class="text-light">For connect your cluster, write to <a
+			<p class="text-light">For more info, write to <a
 					href="mailto:{{ mail }}?Subject=Connect%20my%20DxCluster%20node" target="_top" class="text-white">{{
 					mail }}</a></p>
 		</div>
